# unaiverse-src

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docs.html  go_pip.sh  pyproject.toml  requirements.txt  requirements_tested.txt
.github/ISSUE_TEMPLATE/: 1-python-bug.yml  2-webapp-bug.yml  3-feature-request.yml  config.yml
assets/quick_start/B_improve_A_and_use_browser/: 4_agent_resnet_img_text.py  5_agent_generator_img.py
assets/tutorial/A_move_to_unaiverse/: 1_generator_and_resnet.py  2_agent_resnet.py  3_agent_generator.py
assets/tutorial/B_improve_A_and_use_browser/: 4_agent_resnet_img_text.py  5_agent_generator_img.py
src/unaiverse/: __init__.py  agent.py  agent_basics.py  clock.py  dataprops.py  hsm.py  streams.py  world.py
src/unaiverse/modules/: networks.py  utils.py
src/unaiverse/modules/cnu/: cnus.py  layers.py  psi.py
src/unaiverse/modules/hl/: __init__.py  hl_utils.py
src/unaiverse/networking/node/: __init__.py  connpool.py  node.py  profile.py  tokens.py
src/unaiverse/networking/p2p/: __init__.py  go.mod  lib.go  lib.h  p2p.py  (+5 more)
src/unaiverse/streams/: streams.py
src/unaiverse/streamslib/: __init__.py
src/unaiverse/utils/: lone_wolf.json  misc.py  sandbox.py  server.py
unaiverse/: agent.py  agent_basics.py  clock.py  dataprops.py  hsm.py  streams.py  world.py
unaiverse/networking/node/: connpool.py  node.py  profile.py  tokens.py
unaiverse/networking/p2p/: __init__.py  compile_proto.sh  go.sum  golibp2p.py  lib_types.py  message_pb2.py  messages.py  mylogger.py  p2p.py
unaiverse/utils/: misc.py  sandbox.py  server.py
